[metadata]
name = pull-twitter
version = 0.1.0
author = "D. Hudson Smith, Nicholas Deas"
author_email = "dane2@clemson.edu, ndeas@clemson.edu"
description = The convenient, research-oriented interface to the Twitter API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dhudsmith/pull_twitter
project_urls =
    Bug Tracker = https://github.com/dhudsmith/pull_twitter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    pydantic==1.8.2
    requests==2.26.0
    pandas==1.3.4
    pyyaml==5.4.1
    tweepy @ git+https://github.com/tweepy/tweepy.git@145d7cfb902ed7bd10143e201ea89af41ba7d628
    twitter-alchemy @ git+https://github.com/dhudsmith/twitter-alchemy.git@fa00f933cbca3d6fac29fa135ae111e678ebc57f
python_requires = >=3.6

[options.packages.find]
include = utils